# direct-sqlite

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  changelog  direct-sqlite.cabal  direct-sqlite.faction  stack-9.0.yaml  stack-9.2.yaml  stack.yaml
.github/workflows/: haskell-ci.yml
Database/: SQLite3.hs  SQLite3.hsc
Database/SQLite3/: Bindings.hs  Direct.hs
Database/SQLite3/Bindings/: Types.hsc
scripts/: update-c-src.sh  update-cbits.sh
test/: Main.hs  Main2.hs  notes-fulltext.txt
