name: direct-sqlite
version: 2.3.18
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012, 2013 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: Janne Hellsten <jjhellst@gmail.com>
homepage: https://github.com/IreneKnapp/direct-sqlite
bug-reports: https://github.com/IreneKnapp/direct-sqlite/issues/new
category: Database
synopsis: Low-level binding to SQLite3.  Includes UTF8 and BLOB support.
Cabal-version: >= 1.10
Build-type: Simple
description:
  This package is not very different from the other SQLite3 bindings out
  there, but it fixes a few deficiencies I was finding.  As compared to
  bindings-sqlite3, it is slightly higher-level, in that it supports
  marshalling of data values to and from the database.  In particular, it
  supports strings encoded as UTF8, and BLOBs represented as ByteStrings.

extra-source-files:
  cbits/sqlite3.c
  cbits/sqlite3.h
  changelog

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/direct-sqlite.git

flag systemlib
  description: Use the system-wide sqlite library
  default: False

flag fulltextsearch
  description: Enable full-text search when using the bundled sqlite library
  default: True

flag urifilenames
  description: Enable URI filenames when using the bundled sqlite library
  default: True

Library
  exposed-modules:
    Database.SQLite3
    Database.SQLite3.Direct
    Database.SQLite3.Bindings
    Database.SQLite3.Bindings.Types

  if flag(systemlib) {
    cpp-options: -Ddirect_sqlite_systemlib
    extra-libraries: sqlite3
  } else {
    if !os(windows) {
      extra-libraries: pthread
    }
    c-sources: cbits/sqlite3.c
    if flag(fulltextsearch) && flag(urifilenames) {
      cc-options: -DSQLITE_ENABLE_FTS3
                  -DSQLITE_ENABLE_FTS3_PARENTHESIS
                  -DSQLITE_ENABLE_FTS4
                  -DSQLITE_USE_URI
    } else {
      if flag(fulltextsearch) {
        cc-options: -DSQLITE_ENABLE_FTS3
                    -DSQLITE_ENABLE_FTS3_PARENTHESIS
                    -DSQLITE_ENABLE_FTS4
      }
      if flag(urifilenames) {
        cc-options: -DSQLITE_USE_URI
      }
    }
  }

  include-dirs: .
  build-depends: base >= 4.1 && < 5,
                 bytestring >= 0.9.2.1,
                 text >= 0.11
  ghc-options: -Wall -fwarn-tabs
  default-language: Haskell2010


test-suite test
  type:           exitcode-stdio-1.0

  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    StrictEq

  ghc-options: -Wall -threaded -fno-warn-name-shadowing -fno-warn-unused-do-bind

  default-language: Haskell2010

  default-extensions: DeriveDataTypeable
                    , NamedFieldPuns
                    , OverloadedStrings
                    , Rank2Types
                    , RecordWildCards
                    , ScopedTypeVariables

  build-depends: base
               , base16-bytestring
               , bytestring
               , directory
               , HUnit
               , direct-sqlite
               , temporary
               , text
